--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
+backlog/
 
 # vercel
 .vercel
@@ -38,3 +39,4 @@ next-env.d.ts
 
 #Notion_db
 /Notion_DB
+
