--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "type-check": "tsc --noEmit",
     "lint": "eslint --ignore-path .gitignore \"**/*.+(ts|js|tsx)\"",
     "format": "prettier --ignore-path .gitignore \"**/*.+(ts|js|tsx)\" --write",
-    "ingest": "tsx -r dotenv/config scripts/ingest-data.ts"
+    "ingest": "tsx -r dotenv/config scripts/ingest-data.ts",
+    "delete-collection": "tsx -r dotenv/config scripts/delete-collection.ts"
   },
   "dependencies": {
+    "@langchain/community": "^0.0.48",
     "@microsoft/fetch-event-source": "^2.0.1",
-    "chromadb": "1.4.1",
     "@radix-ui/react-accordion": "^1.1.1",
+    "chromadb": "1.4.1",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
     "langchain": "0.0.55",
